# CortextSearch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
docs/: roadmap.md
include/: ContextExtractor.hpp  DatabaseManager.hpp  EmbeddingEngine.hpp  FileScanner.hpp  SearchEngine.hpp  Tokenizer.hpp  TokenizerClient.hpp
src/: ContextExtractor.cpp  DatabaseManager.cpp  EmbeddingEngine.cpp  FileScanner.cpp  SearchEngine.cpp  Tokenizer.cpp  TokenizerClient.cpp  embed_smoke.cpp  gui_main.cpp  main.cpp  tokenizer_smoke.cpp
testData/: file1.txt  file2.txt  file3.txt  file4.txt
testData/subfolder/: test5.txt  test6.txt
tests/: test_embed_once.py  testonnxruntime.py
tools/: tokenize.md  tokenize.py
